--- a/css/styles.css
+++ b/css/styles.css
@@ -370,6 +370,10 @@ button {
     background-color: var(--accent-color);
 }
 
+.social-items-link {
+    fill: rgba(175, 177, 184, 1);
+}
+
 /* Regular customers */
 .client-list {
     display: flex;
@@ -545,6 +549,13 @@ button {
     margin-right: 8px;
 }
 
+.prt-btn:hover,
+.prt-btn:focus {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
 .porffolio-filter li:last-child .prt-btn {
     margin-right: 0;
 }
@@ -582,6 +593,10 @@ button {
 
 .work-card-item:nth-last-child(-n + 3) {
     margin-bottom: 0px;
+}
+
+.work-card-item:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .work-card-img {
