--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,29 @@ button {
     margin-left: 93px;
 }
 
+.site-nav-link {
+    position: relative;
+}
+
+.site-nav-link::after {
+    position: absolute;
+    display: block;
+    content: '';
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background: var(--accent-color);
+    top: 47px;
+    opacity: 1;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.site-nav-link:hover::after,
+.site-nav-link:focus::after {
+    color: var(--accent-color);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .site-nav-item:not(:last-child) {
     margin-right: 50px;
 }
@@ -127,7 +150,7 @@ button {
     padding-bottom: 32px;
 }
 
-.site-nav-link,
+/* .site-nav-link,
 .auth-nav-link {
     text-decoration: none;
     font-family: Roboto;
@@ -135,7 +158,10 @@ button {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-}
+    transition-property: color;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 1;
+} */
 
 .site-nav-link {
     color: var(--title-text-color);
@@ -164,8 +190,11 @@ button {
 }
 
 .btn-mail {
+    display: block;
     fill: var(--primary-text-color);
     margin-right: 10px;
+    transition-property: fill;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-mail:hover {
@@ -231,6 +260,61 @@ button {
     border-color: var(--accent-color);
 }
 
+/* Modal */
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.2);
+    z-index: 3;
+    opacity: 1;
+    transition: opacity var(--transition-timing-function) var(--transition-duration);
+}
+
+.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0.8);
+}
+
+.modal {
+    position: absolute;
+    z-index: 3;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    min-width: 528px;
+    min-height: 581px;
+    background: rgba(255, 255, 255, 1);
+    border-radius: 4px;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.btn-close {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: var(--white-color);
+    padding: 6px;
+}
+
+.btn-close-icon {
+    fill: #000;
+}
+
 /* Features */
 .section-title {
     margin-bottom: 50px;
@@ -283,17 +367,40 @@ button {
     line-height: 42px;
     text-align: center;
     letter-spacing: 0.03em;
-    padding: 50px 0;
+    margin-bottom: 50px;
 }
 
 .work-fotos {
     display: flex;
     justify-content: space-between;
     padding-left: 0px;
+    z-index: 1;
+}
+
+.work-img-cont {
+    position: relative;
+    z-index: 1;
 }
 
 .card-image {
     display: block;
+}
+
+.card-image-cont {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    min-height: 70px;
+    background: rgba(47, 48, 58, 0.8);
+    padding-top: 27px;
+    padding-bottom: 27px;
+}
+
+.card-image-title {
+    text-transform: uppercase;
+    color: var(--white-color);
+    text-align: center;
 }
 
 /* Our team */
@@ -547,6 +654,8 @@ button {
     background-color: #f5f4fa;
     border-radius: 4px;
     margin-right: 8px;
+    transition-property: background-color, color;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .prt-btn:hover,
@@ -578,6 +687,7 @@ button {
 }
 
 .work-card-item {
+    display: block;
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
@@ -585,6 +695,10 @@ button {
     border-bottom: 1px solid #eeeeee;
     border-left: 1px solid #eeeeee;
     border-right: 1px solid #eeeeee;
+    background: #ffffff;
+    border: 1 px solid #eeeeee;
+    transition-property: box-shadow, opacity;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .work-card-item:nth-child(3n) {
@@ -607,98 +721,69 @@ button {
     padding: 20px 24px;
 }
 
-/* PORTFLIO PAGE */
-/* Work filter */
-.porffolio-filter {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 50px;
-}
+.work-card-cont {
+    position: relative;
+    overflow: hidden;
 
-.prt-btn {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.63;
-    text-align: center;
-    letter-spacing: 0.03em;
-    background-color: var(--primary-text-color);
-    padding: 6px 22px;
-    color: var(--title-text-color);
-    background-color: #f5f4fa;
-    border-radius: 4px;
-    margin-right: 8px;
-}
+    .work-card-opacity {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(33, 150, 243, 0.9);
+        padding: 63px 23px;
+        opacity: 0;
+        transition-property: transform, opacity;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transform: translateY(100%);
+    }
 
-.porffolio-filter li:last-child .prt-btn {
-    margin-right: 0;
-}
+    .work-card-item:hover .work-card-opacity {
+        opacity: 1;
+        transform: translateY(0%);
+    }
 
-.prt-btn:hover,
-.prt-btn:focus {
-    color: var(--white-color);
-    background-color: var(--accent-color);
-}
+    .work-opacity-text {
+        font-size: 18px;
+        line-height: 1.56;
+        letter-spacing: 0.03em;
+        color: var(--white-color);
+    }
 
-.porffolio-filter .active-filter {
-    background-color: var(--accent-color);
-    color: var(--white-color);
-}
+    .work-card-img {
+        display: block;
+        width: 100%;
+    }
 
-/* Work-cards */
-.work-card {
-    display: flex;
-    flex-wrap: wrap;
-}
+    .port-card {
+        padding: 20px 24px;
+    }
 
-.work-card-item {
-    width: 370px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    background: var(--white-color);
-    border-bottom: 1px solid #eeeeee;
-    border-left: 1px solid #eeeeee;
-    border-right: 1px solid #eeeeee;
-}
+    .portfolio-title {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 2;
+        letter-spacing: 0.06em;
+        color: var(--title-text-color);
+        margin-bottom: 4px;
+    }
 
-.work-card-item:nth-child(3n) {
-    margin-right: 0;
-}
+    .portfolio-work-title {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.88;
+        letter-spacing: 0.03em;
+        color: var(--primary-text-color);
+    }
 
-.work-card-item:nth-last-child(-n + 3) {
-    margin-bottom: 0px;
-}
+    .portfolio-work-item {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.88;
+        letter-spacing: 0.03em;
 
-.work-card-img {
-    width: 100%;
-}
-
-.port-card {
-    padding: 20px 24px;
-}
-
-.portfolio-title {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    color: var(--title-text-color);
-    margin-bottom: 4px;
-}
-
-.portfolio-work-title {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.03em;
-    color: var(--primary-text-color);
-}
-
-.portfolio-work-item {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.03em;
-
-    color: var(--white-color);
-    background-color: var(--accent-color);
-}
+        color: var(--white-color);
+        background-color: var(--accent-color);
+    }
